# distributed-design-learning-hub

./: .flake8  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  Dockerfile  Procfile  README.md  compose.yml  entrypoint.sh  env.example  nltk.txt  pre-commit.example  pyproject.toml  requirements.txt  start_celeryworker.sh  start_flower.sh  start_web.sh
.github/workflows/: ci.yml
app/: __init__.py  airtable.py  airtable_db.py  celery.py  elasticsearch.py  filters.py  models.py  repositories.py  routes.py  tasks.py  utils.py
app/scripts/: ingest_documents.py
app/static/: application.js  styles.css
app/templates/: document.html  document.j2  index.html  index.j2
app/templates/layouts/: main.j2
app/templates/pages/: document.j2  index.j2  tag.j2  theme.j2
app/templates/partials/: breadcrumbs.j2  carousel.j2  carousel_item.j2  document.j2  document_header.j2  document_summary.j2  grid.j2  header.j2  image_placeholder.j2  index_hero.j2  logo.j2  table_document.j2  tag_header.j2  tags.j2  test_listing.j2  theme_header.j2
data/: pdf_fixtures.txt
ddlh/: __init__.py  airtable.py  app.py  celery.py  elasticsearch.py  events.py  extraction.py  fetching.py  filters.py  formatters.py  models.py  rag.py  redis_cache.py  repositories.py  routes.py  tasks.py  utils.py
ddlh/rag/: __init__.py  llamaindex.py
ddlh/scripts/: ingest_documents.py
ddlh/static/: application.js  socket.io.js  styles.css
ddlh/templates/layouts/: main.j2
ddlh/templates/pages/: about_llms.j2  document.j2  format.j2  tag.j2  theme.j2
ddlh/templates/partials/: carousel.j2  carousel_arrow.j2  carousel_item.j2  cookie_banner.j2  document_header.j2  document_summary.j2  footer.j2  format_header.j2  header.j2  index_hero.j2  logo.j2  partner_logos.j2  table.j2  (+4 more)
scripts/: console.sh  ingest_documents.sh  test_ingest_pdfs.sh
tests/: airtable_db_test.py  extraction_test.py  fetching_test.py  repositories_test.py
tests/celery/: dispatch_test.py  ingest_html_test.py  ingest_pdf_test.py  store_test.py
tests/tasks/: dispatch_test.py  fetch_test.py  index_test.py  ingest_html_test.py  ingest_pdf_test.py  store_test.py
