[tool.poetry]
name = "ddhub-prototype"
version = "0.1.0"
description = "Distributed Design Learning Hub Prototype"
authors = ["Tim Cowlishaw <tim@timcowlishaw.co.uk>"]
readme = "README.md"

package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
Flask = "^3.0.3"
elasticsearch = "^8.14.0"
requests = "^2.32.3"
boilerpy3 = "^1.0.7"
pypdf = "^4.2.0"
pyairtable = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
